Handled profile screen data to post only in english language to server

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -201,7 +201,7 @@
                             android:paddingRight="8dp">
 
                             <RadioButton
-                                android:id="@+id/rbOxygen"
+                                android:id="@+id/rbIcu"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
