Fixed hindi translations

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -721,7 +721,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/lato_regular"
                             android:src="@drawable/ic_doctor_with_mask"
-                            android:text="Profile"
+                            android:text="@string/profile"
                             android:textAlignment="center"
                             android:textColor="@color/gray_6"
                             android:textSize="13sp"
@@ -734,7 +734,7 @@
                             android:layout_marginStart="24dip"
                             android:layout_weight="1"
                             android:fontFamily="@font/lato_regular"
-                            android:text="About Us"
+                            android:text="@string/about_us"
                             android:textAlignment="center"
                             android:textAppearance="?android:attr/textAppearanceMedium"
                             android:textColor="@color/gray_6"
