--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -154,7 +154,7 @@
                                 android:focusable="false"
                                 android:fontFamily="@font/lato_regular"
                                 android:freezesText="true"
-                                android:hint="Date of Admission"
+                                android:hint="@string/date_of_admission"
                                 android:imeOptions="actionUnspecified"
                                 android:inputType=""
                                 android:maxLines="1"
@@ -173,7 +173,7 @@
                                 android:drawablePadding="10dp"
                                 android:ems="10"
                                 android:fontFamily="@font/lato_regular"
-                                android:hint="Stay in Hospital in days"
+                                android:hint="@string/stay_in_hospital_in_days"
                                 android:inputType="number"
                                 android:maxLines="1"
                                 android:singleLine="true"
