--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -31,7 +31,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="35dp"
-                android:src="@drawable/ic_logo_app" />
+                android:src="@drawable/ic_app_logo" />
 
             <LinearLayout
                 android:id="@+id/ll_center"
