--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
                 android:layout_height="100dp"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="20dp"
-                android:src="@drawable/ic_logo_app" />
+                android:src="@drawable/ic_app_logo" />
 
             <LinearLayout
                 android:id="@+id/ll_center"
